More knowledge acquired

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# The **/ symbol means that the following filetype (or folder)
+# will be ignored on all folders and subfolders
+
 **/.vs/
 **/Debug/
 **/bin/
